closDevOrg/force-app/main/default/objects/LOS_TAT_Pause__c/LOS_TAT_Pause__c.object-meta.xml
<CustomObject>
    <description>Pause interval and captured SLA counting policy; parent application must match the stage interval.</description>
    <label>LOS TAT Pause</label>
    <nameField>
        <displayFormat>PAUSE-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOS TAT Pause Records</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>