closDevOrg/force-app/main/default/objects/LOS_TAT_Pause__c/fields/LOS_Count_Toward_SLA__c.field-meta.xml
<CustomField>
    <fullName>LOS_Count_Toward_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Count Toward SLA. See docs/data-dictionary.md for usage.</description>
    <label>Count Toward SLA</label>
    <type>Checkbox</type>
</CustomField>