closDevOrg/force-app/main/default/objects/LOS_TAT_Pause__c/fields/LOS_Pause_End__c.field-meta.xml
<CustomField>
    <fullName>LOS_Pause_End__c</fullName>
    <description>Pause End. See docs/data-dictionary.md for usage.</description>
    <label>Pause End</label>
    <type>DateTime</type>
</CustomField>