closDevOrg/force-app/main/default/objects/LOS_TAT_Pause__c/validationRules/LOS_Matching_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>LOS_Matching_Application</fullName>
    <active>true</active>
    <errorConditionFormula>LOS_Application__c &lt;&gt; LOS_Stage_TAT__r.LOS_Application__c</errorConditionFormula>
    <errorMessage>Application must match the parent stage TAT application.</errorMessage>
</ValidationRule>